# mcp

./: README.md
hello_world/: 1_mcp_client.py  2_mcp_chat_agent.py  3_gradio_app.py  README.md  gradio_app.py  main.py  mcp_chat_agent.py  mcp_client.py  pyproject.toml
hello_world/server/: mcp_server_sse.py  mcp_server_stdio.py
spotify-mcp/: .cache  .gitignore  README.md  pyproject.toml  spotify_api.py  spotify_mcp.py
spotify-mcp/src/: spotify_api.py  spotify_fastmcp.py  spotify_mcp.py
youtube-mcp-server/: README.md  main.py  pyproject.toml  test_api.py
