[project]
name = "spotify-mcp"
version = "0.2.0"
description = "MCP spotify project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "mcp[cli]==1.3.0",
 "python-dotenv>=1.0.1",
 "spotipy==2.24.0",
]
[[project.authors]]
name = "Varun Srivastava"
email = "varun.neal@berkeley.edu"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv.sources]
src = { path = "src" }

[tool.hatch.build.targets.wheel]
include = ["src/spotify_fastmcp.py"]

[project.scripts]
spotify-mcp = "src.spotify_fastmcp:main"